SERVER-54892 dbHash doesn't run on clustered collections